<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_name">登陆</string>
    <string name="welcome_to_coffeeonline_system">欢迎来到在线咖啡销售系统</string>
    <string name="app_name">CoffeeStore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">立即登录</string>
    <string name="get_captcha">获取验证码</string>
    <string name="phone_number">手机号码</string>
    <string name="success">注册成功</string>
    <string name="login_now">现在登录</string>
    <string name="new_password">新密码</string>
    <string name="verify_phone">验证</string>
    <string name="finish">完成</string>
    <string name="captcha">验证码</string>
    <string name="find_password">找回密码</string>
    <string name="integral_rule">注：100积分=1元抵值劵，1000积分=10元抵值劵（抵值劵只能在此APP上进行使用，不支持抵值劵提现）</string>
    <string name="login_or_register">登录/注册</string>
    <string name="forgetpwd"><a href="">忘记密码</a></string>
    <string name="register"><a href="">新用户</a></string>
    <string name="title_activity_register1">Register1Activity</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="title_activity_shop_detail">ShopDetailActivity</string>
    <string name="txt_feedback_textarea">让吐槽来的更猛烈些吧</string>
    <string name="txt_your_name_phone_email">您的姓名、手机、邮箱等</string>
    <string name="developer_qq">意见反馈QQ：2695118008</string>
    <string name="developer_email">意见反馈邮箱：zhangshengjian@163.com</string>
    <string name="search">搜索商品/品牌/种类</string>
    <string name="go_to_home">到首页去看看</string>
    <string name="you_have_not_selected">还没有选择商品</string>
    <string name="feedback">意见反馈</string>
    <string name="submit">提交</string>
    <string name="title_activity_coffee_cultrue">CoffeeCultrueActivity</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="title_activity_update_shop">UpdateShopActivity</string>
    <string name="title_activity_add_shop">AddShopActivity</string>

</resources>
