<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:inputType="phone"
            android:textColorHint="@color/input_context" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/verify_btn_style"
            android:padding="8dp"
            android:text="@string/verify_phone"
            android:textColor="@color/button_font"
            android:textSize="17dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/input_context"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_captcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/captcha"
        android:padding="10dp"
        android:inputType="number"
        android:textColorHint="@color/input_context"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_btn_style"
        android:text="@string/finish"
        android:textColor="@color/button_font"
        android:textSize="17sp" />

</LinearLayout>